<resources>
    <string name="app_name">Welcome to the Oceans and Sea Life Quiz</string>
    <string name="name_prompt">You have to write your name!</string>
    <string name="intro">The aim of this quiz is to test your knowledge about the earth\'s wonderful and mysterious oceans. It should be fun and informative. Good Luck!</string>
    <string name="start_btn">Click Here to Begin</string>
    <string name="quiz_title">Oceans and Sea Life Quiz</string>
    <string name="quiz_info">You must complete all questions in this quiz. Each correct answer scores one point.</string>
    <string name="q1">What Percent of the Earth is covered by Oceans?</string>
    <string name="q1_option1">70%</string>
    <string name="q1_option2">60%</string>
    <string name="q1_option3">75%</string>
    <string name="a1_ans">70%</string>
    <string name="q2">What is the collective noun for Orcas?</string>
    <string name="q2_ans">Pod</string>
    <string name="q3">Jelly fish are older than Dinosaurs. True or False?</string>
    <string name="q3_option1">True</string>
    <string name="q3_option2">False</string>
    <string name="q4">Which of these Sharks are dangerous to humans? Check all that apply</string>
    <string name="q4_option1">Bull Shark</string>
    <string name="q4_option2">Whale Shark</string>
    <string name="q4_option3">Tiger Shark</string>
    <string name="q4_option4">Great White Shark</string>
    <string name="q5">Which of these depicts the animal fondly known as a \"sea cow\"?</string>
    <string name="q6">What colour is an Octopus\' blood?</string>
    <string name="q6_option1">Red</string>
    <string name="q6_option2">Blue</string>
    <string name="q6_option3">Green</string>
    <string name="q6_option4">Purple</string>
    <string name="q7">What is the name of this fish?</string>
    <string name="q7_hint">Not Nemo!!!</string>
    <string name="q7_ans">Clown Fish</string>
    <string name="submit_btn">Submit Answers</string>
    <string name="submit_check">You must answer all questions!</string>
    <string name="score_message1">you scored: </string>
    <string name="score_message_Great">Amazing</string>
    <string name="score_message_great_2">You\'re a real Master of the Sea!</string>
    <string name="score_message_Good">Great Work</string>
    <string name="score_message_Good2">But you\'ll need a little more practice before you\re ready to sail solo!</string>
    <string name="score_messgae_not_so_good1">Oh no </string>
    <string name="score_messgae_not_so_good2">Unlucky captain. Better luck next time!</string>


</resources>
